fix nav z-index for overlapping svg

--- a/dir.css
+++ b/dir.css
@@ -156,6 +156,7 @@ table tr td.right {
   background: white;
 	padding: 0;
 	margin: 0 auto;
+  z-index: 1;
 	width: 70%;
 	padding: .25em 0;
 	border-bottom: 10px solid red;
